@@ -1,0 +1,4 @@
+class StubbyGenerator < Rails::Generator::Base
+  def manifest
+  end
+end
