@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that script/generate would not look for plugin generators in plugin_paths #11000 [glv]
+
 * Fix database rake tasks to work with charset/collation and show proper error messages on failure. Closes #11301 [matt]
 
 * add a -e/--export to script/plugin install, uses svn export. #10847 [jon@blankpad.net)]
